--- a/src/App.css
+++ b/src/App.css
@@ -22,5 +22,11 @@
   justify-content: center;
   text-align: center;
   width: 100%;
+  height: 100%;
   max-width: 100%;
+  max-height: 100%;
+}
+
+#root {
+  height: 100vh;
 }
